kubernetes/issue-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issue-service
  template:
    metadata:
      labels:
        app: issue-service
    spec:
      containers:
        - name: issue-service
          image: wilpaiz/issue-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
