kubernetes/mysql-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-service
  template:
    metadata:
      labels:
        app: mysql-service
    spec:
      containers:
        - name: mysql-service
          image: wilpaiz/mysql-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
