kubernetes/file-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  selector:
    app: file-service
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8085
  type: ClusterIP
