kubernetes/issue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: issue-service
spec:
  selector:
    app: issue-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
