kubernetes/mysql-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
